--- a/game.html
+++ b/game.html
@@ -20,6 +20,6 @@
     </label>
     <span class="switch-label">Dark Mode</span>
 
-    <script src="script.js"></script>
+    <script src="hungryscript.js"></script>
 </body>
 </html>
