--- a/index.html
+++ b/index.html
@@ -24,45 +24,21 @@
     </style>
 </head>
 <body class="light-mode">
-    <h1>Welcome to Amog Game</h1>
-    <div id="menu" role="menu">
-        <button class="button" onclick="startGame()" aria-label="Start Game Button" role="menuitem">Start Game</button>
-        <button class="button" onclick="showInstructions()" aria-label="Instructions Button" role="menuitem">Instructions</button>
-        <button class="button" onclick="showCredits()" aria-label="Credits Button" role="menuitem">Credits</button>
-        <label class="switch" id="darkModeToggle">
-            <input type="checkbox" id="toggle">
-            <span class="slider round"></span>
-        </label>
-        <span class="switch-label">Dark Mode</span>
-    </div>
-
-    <script>
-        const toggleSwitch = document.querySelector('#toggle');
-
-        toggleSwitch.addEventListener('change', switchTheme, false);
-
-        function switchTheme(e) {
-            if (e.target.checked) {
-                document.documentElement.setAttribute('data-theme', 'dark');
-                document.body.classList.add('dark-mode');
-                localStorage.setItem('darkMode', 'enabled'); // Save dark mode preference to local storage
-            } else {
-                document.documentElement.setAttribute('data-theme', 'light');
-                document.body.classList.remove('dark-mode');
-                localStorage.setItem('darkMode', 'disabled'); // Save light mode preference to local storage
-            }
-        }
-
-        // Check dark mode preference on page load
-        window.onload = function() {
-            const darkMode = localStorage.getItem('darkMode');
-            if (darkMode === 'enabled') {
-                document.documentElement.setAttribute('data-theme', 'dark');
-                document.body.classList.add('dark-mode');
-                document.querySelector('#toggle').checked = true;
-            }
-        };
-    </script>
+    <header>
+        <h1>Welcome to Amog Game</h1>
+    </header>
+    <main>
+        <div id="menu" role="menu">
+            <button class="button" onclick="startGame()" aria-label="Start Game Button" role="menuitem">Start Game</button>
+            <button class="button" onclick="showInstructions()" aria-label="Instructions Button" role="menuitem">Instructions</button>
+            <button class="button" onclick="showCredits()" aria-label="Credits Button" role="menuitem">Credits</button>
+            <label class="switch" id="darkModeToggle">
+                <input type="checkbox" id="toggle" aria-label="Toggle for Dark Mode">
+                <span class="slider round"></span>
+            </label>
+            <span class="switch-label">Dark Mode</span>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
